# photo-collage-tool

./: .gitattributes  .gitignore  LICENSE  Pipfile  celeryworker.py  pyproject.toml  readme.md  requirements.txt  run.py  setup.py  tox.ini  wsgi.py
.github/workflows/: python-app.yml
application/: __init__.py  forms.py  remove_files.py  tasks.py
application/main/: routes.py
application/static/css/: style.css
application/static/fonts/: Arcus-Regular.eot
application/static/js/: loadimage.js  script.js
application/templates/: 404.html  413.html  500.html  502.html  layout.html  maintenance.html
application/templates/main/: index.html  privacy_policy.html  result.html  terms_of_service.html  workspace.html
tests/: test_routes.py  test_tasks.py
