[project]
name = "photo-collage-tool"
description = "Use multiple images to create a collage."
authors = ["Brandon Wallace"]
license = "GPL3"
readme = "readme.md"
python = "^3.9"
homepage = "https://github.com/brandon-wallace/photo-collage-tool"
repository = "https://github.com/brandon-wallace/photo-collage-tool"
documentation = "https://github.com/brandon-wallace/photo-collage-tool"

[build-system]
requires = ["setuptools >= 58.2.0", "setuptools_scm >= 6.3.2"]
build-backend = "setuptools.build_meta"
